Rating and winners page made

--- a/src/main/resources/templates/ContestsFromPhase1View.html
+++ b/src/main/resources/templates/ContestsFromPhase1View.html
@@ -42,7 +42,7 @@
                         <div class="cell">Contest</div>
                         <div class="cell">Category</div>
                         <div class="cell">Phase</div>
-                        <div class="cell">Time Remaining</div> <!-- Нова колона -->
+                        <div class="cell">Time Remaining</div>
                     </div>
                     <div class="row" th:each="contest : ${contests}">
                         <div class="cell post-title">
