--- a/src/main/resources/templates/HomeView.html
+++ b/src/main/resources/templates/HomeView.html
@@ -16,18 +16,17 @@
         <nav>
             <ul class="nav-links">
                 <li><a th:href="@{/prizes}">Prizes</a></li>
-                <li><a th:href="@{/winners}">Winners</a></li>
                 <li><a th:href="@{/submit-photo}">Submit Your Photo</a></li>
 
                 <li><a href="#" th:href="@{/}" th:text="#{navigation.home}">Home</a></li>
-                <li><a href="#categories">Categories</a></li> <!-- Линкът води към секцията с id="categories" -->
+                <li><a href="#categories">Categories</a></li>
                 <li><a href="#" th:unless="${isAuthenticated}" th:href="@{/auth/login}">Login</a></li>
                 <li><a href="#" th:unless="${isAuthenticated}" th:href="@{/auth/register}">Register</a></li>
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/auth/logout}">Logout</a></li>
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/user/me}">My Profile</a></li>
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/contest/phaseOne}">Contests In Phase
                     1</a></li>
-                <li><a href="#" th:if="${isAuthenticated}" th:href="@{/contest/finished}">Previous Contests</a></li>
+                <li><a href="#" th:if="${isAuthenticated}" th:href="@{/contest/finished}">Winners</a></li>
                 <li><a href="#"
                        th:if="(${isAuthenticated}) and (${session.isOrganizer} or ${session.isJury})"
                        th:href="@{/contest/phaseTwo}">Contests In Phase 2</a></li>
