New for Organizers to see all users with valid filtration, sorting and pagination

--- a/src/main/resources/templates/HomeView.html
+++ b/src/main/resources/templates/HomeView.html
@@ -31,6 +31,7 @@
                        th:if="(${isAuthenticated}) and (${session.isOrganizer} or ${session.isJury})"
                        th:href="@{/contest/phaseTwo}">Contests In Phase 2</a></li>
                 <li><a th:if="${isAuthenticated} and ${session.isOrganizer}" th:href="@{/contest/new}">Create New Contest</a></li>
+                <li><a th:if="${session.isOrganizer}" th:href="@{/user/users}">All Users</a></li>
             </ul>
         </nav>
     </div>
