The functionality where you can see all your photos and can see all ratings of each photo is created.

--- a/src/main/resources/templates/HomeView.html
+++ b/src/main/resources/templates/HomeView.html
@@ -26,6 +26,7 @@
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/user/me}">My Profile</a></li>
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/contest/phaseOne}">Contests In Phase
                     1</a></li>
+                <li><a href="#" th:if="${isAuthenticated}" th:href="@{/photo/photos/of/user}">My Photos</a></li>
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/contest/finished}">Winners</a></li>
                 <li><a href="#"
                        th:if="(${isAuthenticated}) and (${session.isOrganizer} or ${session.isJury})"
