Rate photo page fixed, when you mark Unmatch default score is 0

--- a/src/main/resources/static/css/rating.css
+++ b/src/main/resources/static/css/rating.css
@@ -76,7 +76,8 @@ label {
 }
 
 input[type="text"],
-textarea {
+textarea,
+select {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -108,6 +109,12 @@ input[type="radio"] {
     color: red;
     font-size: 0.9em;
     margin-top: -10px;
+    margin-bottom: 15px;
+}
+
+.radio-group {
+    display: flex;
+    justify-content: space-around;
     margin-bottom: 15px;
 }
 
